fix bug where bookmark banner text is invisible

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,9 @@ div.ads {
     cursor: pointer;
     cursor: hand;
 }
+bookmark-banner > p {
+    color: #cccccc;
+}
 h1.title {
     display: inline
 }
